[package]
name = "bpf-ins"
version = "0.6.1"
edition = "2021"
categories = ["compilers", "data-structures"]
homepage = "https://github.com/arcjustin/bpf-ins"
keywords = ["linux", "bpf", "instructions", "bytecode", "ebpf" ]
license = "MIT"
readme = "README.md"
repository = "https://github.com/arcjustin/bpf-ins"
description = "A library for working with eBPF instructions."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
